# ipydatawidgets

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  codecov.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  tsconfig-base.json  tsconfig.json
.github/workflows/: js.yml  python.yml
examples/: DataImage.ipynb  introduction.ipynb  test.ipynb
ipydatawidgets/: __init__.py  _frontend.py  _version.py  scaled.py  serializers.py  trait_types.py  widgets.py
ipydatawidgets/jlextension/: package.json
ipydatawidgets/jlextension/src/: index.ts  plugin.ts
ipydatawidgets/nbextension/: __init__.py
ipydatawidgets/nbextension/static/: extension.js
ipydatawidgets/ndarray/: __init__.py  media.py  serializers.py  traits.py  union.py  widgets.py
ipydatawidgets/numpy/: __init__.py  serializer.py  traits.py  widgets.py
ipydatawidgets/scaled/: __init__.py  widgets.py
ipydatawidgets/tests/: conftest.py  test_nbextension_path.py  test_ndarray_serializers.py  test_ndarray_trait.py  test_scaled.py  test_union.py  test_validator.py  test_widgets.py
java/: DataWidget.java  NDArraySerializer.java  NDArrayWidget.java
jupyter-config/notebook.d/: jupyter-datawidgets.json
ts/: package.json  webpack.config.js
ts/src/: index.ts  nbextension.ts  ndarray.ts  tsconfig.json  union.ts  version.ts
ts/tests/src/: dummy-manager.spec.ts  ndarray.spec.ts  union.spec.ts
