[bdist_wheel]
universal=1

[metadata]
description-file = README.md
license_file = LICENSE.txt

[manifix]
known-excludes =
    .git*
    .git/**/*
    .coveragerc
    .travis.yml
    appveyor.yml
    codecov.yml
    lerna-debug.log
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    packages/**/coverage/**/*
    packages/**/lib/**/*
    packages/**/test/build/**/*
