[bdist_wheel]
universal=1

[metadata]
description-file = README.md
license_file = LICENSE.txt

[manifix]
known-excludes =
    .git*
    .git/**/*
    .coveragerc
    codecov.yml
    dist
    lerna-debug.log
    MANIFEST.in
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    packages/**/coverage/**/*
    packages/**/lib/**/*
    packages/**/test/build/**/*
    packages/**/tsconfig.tsbuildinfo
    packages/jlabextension/build/**/*
    ipydatawidgets.egg-info
    build/**/*
    lib/**/*
